Fix the overlapping of anchors in product detail page.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2255,7 +2255,6 @@ footer {
   border-bottom: 1px solid #ccc; }
 
 .page-nav {
-  height: 60px;
   line-height: 60px; }
   .page-nav li {
     padding: 0 15px; }
