--- a/static/sass/pages/_landing.scss
+++ b/static/sass/pages/_landing.scss
@@ -5,7 +5,6 @@
 }
 
 .page-nav {
-  height: 60px;
   line-height: 60px;
   li {
     padding: 0 15px;
